test/domains/bradc/modDomQuery.good
modDomQuery.chpl:13: In function 'foo':
modDomQuery.chpl:14: error: illegal lvalue in assignment
